# onion-core

./: .pre-commit-config.yaml  README.md  pyproject.toml
onion/: __main__.py
onion/components/: __init__.py  application.py  base.py  component.py  container.py  factory.py  reflection.py
onion/core/: events.py
onion/declarations/: __init__.py  contextual.py  declaration.py  processor.py  repl.py  schema.py  util.py
onion/declarations/contextual/: __init__.py  base.py  evaluation.py
onion/declarations/contextual/config/: __init__.py  base.py  factory.py
onion/declarations/contextual/config/impl/: yaml.py
tests/: conftest.py  declaration.yaml  test_contextual.py  test_declaration.py  test_events.py
tests/example_app/: __init__.py  accumulator.py  actuator.py  checker.py  temperature.py  thermometer.py
