[tool.poetry]
name = "onion"
version = "0.1.0"
description = ""
authors = ["Suhendi Andigo <suhendiandigo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest-asyncio-cooperative = "^0.17.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
